# DronesAFC

./: .gitignore
src/drone_trainer/: CMakeLists.txt  package.xml
src/drone_trainer/include/drone_trainer/: mlp.hpp  trainer.hpp
src/drone_trainer/src/: main.cpp  obstacle.cpp  trainer.cpp
